# oceandrift

./: .gitignore  README.md  package-lock.json  requirements.txt
backend/: pyproject.toml
backend/oceanapi/: __init__.py  __main__.py  app.py  schemas.py  serialize.py  service.py
backend/oceandrift/: __init__.py  engine.py  seeding.py
backend/oceanfield/: __init__.py  base.py  eddies.py  grid.py  gyres.py  landmask.py  toy.py  zonal.py
backend/scripts/: plot_drift.py  plot_field.py
backend/tests/: test_api.py  test_drift.py  test_field.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  currentLayer.js  driftLayer.js  main.js  style.css  viewer.js
