[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanfield"
version = "0.1.0"
description = "Analytic, offline toy model of Earth's surface ocean currents."
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.21",
    "global-land-mask>=1.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.4",
    "cartopy>=0.20",
]

[tool.setuptools]
packages = ["oceanfield"]
