[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "oceandrift"
version = "0.1.0"
description = "Offline toy model of Earth's surface currents and the drift of objects on them."
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.21",
    "global-land-mask>=1.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.4",
    "cartopy>=0.20",
    "scipy>=1.7",
]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
]

[tool.setuptools]
packages = ["oceanfield", "oceandrift", "oceanapi"]
